--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -3,6 +3,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:9999/eureka/
+  instance:
+    hostname: localhost
 
 ---
 spring:
