--- a/micro1/src/main/resources/application.properties
+++ b/micro1/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
-server.port=8000
+server.port=${PORT:${SERVER_PORT:0}}
