use Ribbon load balancer

--- a/micro1/src/main/resources/bootstrap.yml
+++ b/micro1/src/main/resources/bootstrap.yml
@@ -40,3 +40,10 @@ spring:
   profiles: noun
   application:
     name: client-noun
+
+---
+spring:
+  profiles: cold-noun
+  application:
+    name: client-noun
+    
