--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -14,7 +14,7 @@ words: I,You,He,She,It
 ---
 spring:
   profiles: verb
-words: ran,knew,had,saw,bought
+words: love,hate,join,struggle,fight
 
 ---
 spring:
