--- a/micro1/build.gradle
+++ b/micro1/build.gradle
@@ -2,13 +2,12 @@ plugins {
 	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
-	id 'war'
 	id 'eclipse'
 }
 
 group = 'com.iyastreb'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = '12'
 
 repositories {
 	mavenCentral()
@@ -30,10 +29,12 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
 	implementation 'org.hsqldb:hsqldb'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
 }
 
 test {
