--- a/micro1/build.gradle
+++ b/micro1/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
 	implementation 'org.hsqldb:hsqldb'
-
+	implementation 'io.reactivex.rxjava3:rxjava:3.0.2'
+	
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
 }
