--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -9,27 +9,27 @@ eureka:
 ---
 spring:
   profiles: subject
-words: I,You,He,She,It
+words: I,You,He,She,It,Ilia,Maxim
 
 ---
 spring:
   profiles: verb
-words: love,hate,join,struggle,fight
+words: love,hate,join,struggle,fight,merge,sort
 
 ---
 spring:
   profiles: article
-words: a,the
+words: a,the,one
 
 ---
 spring:
   profiles: adjective
-words: reasonable,leaky,suspicious,ordinary,unlikely
+words: reasonable,leaky,suspicious,ordinary,tiny,big,huge
 
 ---
 spring:
   profiles: noun
-words: boat,book,vote,seat,backpack,partition,groundhog
+words: boat,book,vote,seat,backpack,look,shield,
 
 ---
 spring:
