--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -40,7 +40,7 @@ words: reasonable,leaky,suspicious,ordinary,lazy,big,little,new
 ---
 spring:
   profiles: noun
-words: world,stack,seat,oak,list,map,set
+words: world,stack,seat,oak,list,map,set,11,22,33,44
 
 ---
 spring:
