--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -20,12 +20,12 @@ spring:
 ---
 spring:
   profiles: subject
-words: I,You,He,She,It
+words: I,You,He,She,It,Ilia
 
 ---
 spring:
   profiles: verb
-words: love,hate,join,struggle,fight
+words: love,hate,join,struggle,fight,take,waste
 
 ---
 spring:
@@ -35,12 +35,12 @@ words: a,the,one
 ---
 spring:
   profiles: adjective
-words: reasonable,leaky,suspicious,ordinary
+words: reasonable,leaky,suspicious,ordinary,lazy,big,little
 
 ---
 spring:
   profiles: noun
-words: world,stack,seat,oak,list,map,set
+words: world,stack,seat,oak,list,map,set,hash
 
 ---
 spring:
