--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -6,5 +6,21 @@ spring:
         git:
           uri: https://github.com/iyastreb/spring
           searchPaths: config-repo
+    bus:
+      enabled: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 server:
   port: 8888
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-env,bus-refresh,refresh,info,health
+  security:
+    enabled: false
