--- a/micro1/src/main/resources/application.properties
+++ b/micro1/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
+management.security.enabled=false
 server.port=${PORT:${SERVER_PORT:0}}
