--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -5,6 +5,7 @@ eureka:
       defaultZone: http://localhost:9999/eureka/
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+    preferIpAddress: true
 
 ---
 spring:
